started blog work and added google fonts

--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
   "browserify-shim": {
     "jQuery": "$",
     "underscore": "_"
+  },
+  "dependencies": {
+    "gatsby-plugin-google-fonts": "0.0.4"
   }
 }
