--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "underscore": "_"
   },
   "dependencies": {
-    "gatsby-plugin-google-fonts": "0.0.4"
+    "gatsby-plugin-google-fonts": "0.0.4",
+    "gatsby-source-medium": "^1.0.14"
   }
 }
