--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
   },
   "dependencies": {
     "gatsby-plugin-google-fonts": "0.0.4",
-    "gatsby-source-medium": "^1.0.14"
+    "gatsby-plugin-styled-components": "^2.0.11",
+    "gatsby-source-medium": "^1.0.14",
+    "styled-components": "^3.2.5"
   }
 }
