--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -9,6 +9,7 @@
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sass": "^1.0.25",
+    "gatsby-source-twitter": "^1.3.4",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
