basic shared gallery component.

--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "graysonhicks.com",
   "description": "Gatsby default starter",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Grayson Hicks <graysonhicks@gmail.com>",
   "dependencies": {
     "gatsby": "^1.9.241",
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sass": "^1.0.25",
+    "gatsby-source-thirdparty": "^1.0.6",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
