--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-styled-components": "^2.0.11",
     "gatsby-source-medium": "^1.0.14",
+    "react-icons": "^2.2.7",
     "styled-components": "^3.2.5"
   }
 }
