--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -11,9 +11,10 @@
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sass": "^1.0.25",
-    "gatsby-source-thirdparty": "^1.0.6",
+    "node-fetch": "^2.1.2",
     "octonode": "^0.9.2",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "twitter": "^1.7.1"
   },
   "keywords": [
     "gatsby"
