--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -16,9 +16,7 @@
     "react-helmet": "^5.2.0",
     "twitter": "^1.7.1"
   },
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
@@ -28,7 +26,6 @@
   },
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
-    "gatsby-source-twitter": "^1.3.4",
     "prettier": "^1.11.1"
   }
 }
