--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -16,7 +16,9 @@
     "react-helmet": "^5.2.0",
     "twitter": "^1.7.1"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
