--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -16,15 +16,14 @@
     "react-helmet": "^5.2.0",
     "twitter": "^1.7.1"
   },
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "s3-deploy": "cd public/ && aws s3 sync . s3://graysonhicks.com/gatsby"
   },
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
