--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -11,12 +11,15 @@
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sass": "^1.0.25",
+    "gatsby-plugin-sitemap": "^1.2.20",
     "node-fetch": "^2.1.2",
     "octonode": "^0.9.2",
     "react-helmet": "^5.2.0",
     "twitter": "^1.7.1"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
