--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -7,6 +7,7 @@
     "crypto": "^1.0.1",
     "gatsby": "^1.9.241",
     "gatsby-link": "^1.6.39",
+    "gatsby-plugin-manifest": "^1.0.19",
     "gatsby-plugin-offline": "^1.0.15",
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-react-next": "^1.0.11",
@@ -17,7 +18,9 @@
     "react-helmet": "^5.2.0",
     "twitter": "^1.7.1"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
