--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -6,13 +6,18 @@
   "dependencies": {
     "crypto": "^1.0.1",
     "gatsby": "^1.9.241",
+    "gatsby-image": "^1.0.45",
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-manifest": "^1.0.19",
     "gatsby-plugin-offline": "^1.0.15",
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sass": "^1.0.25",
+    "gatsby-plugin-sharp": "^1.6.42",
     "gatsby-plugin-sitemap": "^1.2.20",
+    "gatsby-source-filesystem": "^1.5.29",
+    "gatsby-transformer-json": "^1.0.16",
+    "gatsby-transformer-sharp": "^1.6.22",
     "node-fetch": "^2.1.2",
     "octonode": "^0.9.2",
     "react-helmet": "^5.2.0",
