--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -21,6 +21,7 @@
     "node-fetch": "^2.1.2",
     "octonode": "^0.9.2",
     "react-helmet": "^5.2.0",
+    "react-scrolltop-button": "^0.1.4",
     "twitter": "^1.7.1"
   },
   "keywords": [
