--- a/package.json
+++ b/package.json
@@ -4,27 +4,31 @@
   "version": "1.0.0",
   "author": "Grayson Hicks <graysonhicks@gmail.com>",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.5.1",
     "crypto": "^1.0.1",
-    "gatsby": "^1.9.241",
-    "gatsby-image": "^1.0.45",
-    "gatsby-link": "^1.6.39",
-    "gatsby-plugin-google-analytics": "^1.0.31",
-    "gatsby-plugin-manifest": "^1.0.19",
-    "gatsby-plugin-offline": "^1.0.15",
-    "gatsby-plugin-react-helmet": "^2.0.8",
-    "gatsby-plugin-react-next": "^1.0.11",
-    "gatsby-plugin-sass": "^1.0.25",
-    "gatsby-plugin-sharp": "^1.6.42",
-    "gatsby-plugin-sitemap": "^1.2.20",
-    "gatsby-plugin-styled-components": "^2.0.11",
-    "gatsby-source-filesystem": "^1.5.29",
-    "gatsby-source-medium": "^1.0.14",
-    "gatsby-transformer-json": "^1.0.16",
-    "gatsby-transformer-sharp": "^1.6.22",
+    "gatsby": "next",
+    "gatsby-image": "next",
+    "gatsby-link": "next",
+    "gatsby-plugin-google-analytics": "next",
+    "gatsby-plugin-manifest": "next",
+    "gatsby-plugin-offline": "next",
+    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-react-next": "next",
+    "gatsby-plugin-sass": "next",
+    "gatsby-plugin-sharp": "next",
+    "gatsby-plugin-sitemap": "next",
+    "gatsby-plugin-styled-components": "^3.0.0-beta.3",
+    "gatsby-source-filesystem": "next",
+    "gatsby-source-medium": "next",
+    "gatsby-transformer-json": "next",
+    "gatsby-transformer-sharp": "next",
     "node-fetch": "^2.1.2",
     "octonode": "^0.9.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-scrolltop-button": "^0.1.4",
+    "styled-components": "^3.3.3",
     "twitter": "^1.7.1"
   },
   "keywords": [
