reverted layout setup and removed nightmode and slide up until fixed

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.5.1",
     "crypto": "^1.0.1",
+    "dotenv": "^6.0.0",
     "gatsby": "next",
     "gatsby-image": "next",
     "gatsby-link": "next",
