--- a/package.json
+++ b/package.json
@@ -4,32 +4,36 @@
   "version": "1.0.0",
   "author": "Grayson Hicks <graysonhicks@gmail.com>",
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.5",
+    "@mdx-js/react": "^1.5.5",
     "babel-plugin-styled-components": "^1.5.1",
     "crypto": "^1.0.1",
     "dotenv": "^6.0.0",
-    "gatsby": "next",
-    "gatsby-image": "next",
-    "gatsby-link": "next",
-    "gatsby-plugin-google-analytics": "next",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-react-next": "next",
-    "gatsby-plugin-sass": "next",
-    "gatsby-plugin-sharp": "next",
-    "gatsby-plugin-sitemap": "next",
+    "gatsby": "^2.19.12",
+    "gatsby-image": "^2.2.40",
+    "gatsby-plugin-google-analytics": "^2.1.35",
+    "gatsby-plugin-manifest": "^2.2.41",
+    "gatsby-plugin-mdx": "^1.0.70",
+    "gatsby-plugin-offline": "^3.0.34",
+    "gatsby-plugin-react-helmet": "^3.1.22",
+    "gatsby-plugin-sass": "^2.1.28",
+    "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-plugin-sitemap": "^2.2.27",
     "gatsby-plugin-styled-components": "^3.0.0-beta.3",
-    "gatsby-source-filesystem": "next",
-    "gatsby-source-medium": "next",
-    "gatsby-transformer-json": "next",
-    "gatsby-transformer-sharp": "next",
+    "gatsby-remark-images": "^3.1.44",
+    "gatsby-source-filesystem": "^2.1.48",
+    "gatsby-source-instagram": "^0.6.1",
+    "gatsby-source-medium": "^2.1.19",
+    "gatsby-transformer-json": "^2.2.26",
+    "gatsby-transformer-remark": "^2.6.50",
+    "gatsby-transformer-sharp": "^2.3.14",
     "node-fetch": "^2.1.2",
     "octonode": "^0.9.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-helmet": "^5.2.0",
     "react-scrolltop-button": "^0.1.4",
-    "styled-components": "^3.3.3",
+    "styled-components": "^5.0.0",
     "twitter": "^1.7.1"
   },
   "keywords": [
