--- a/package.json
+++ b/package.json
@@ -4,36 +4,36 @@
   "version": "1.0.0",
   "author": "Grayson Hicks <graysonhicks@gmail.com>",
   "dependencies": {
-    "@mdx-js/mdx": "^1.5.5",
-    "@mdx-js/react": "^1.5.5",
-    "babel-plugin-styled-components": "^1.5.1",
-    "crypto": "^1.0.1",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "babel-plugin-styled-components": "^1.12.0",
     "dotenv": "^6.0.0",
-    "gatsby": "^2.19.12",
-    "gatsby-image": "^2.2.40",
-    "gatsby-plugin-google-analytics": "^2.1.35",
-    "gatsby-plugin-manifest": "^2.2.41",
-    "gatsby-plugin-mdx": "^1.0.70",
-    "gatsby-plugin-offline": "^3.0.34",
-    "gatsby-plugin-react-helmet": "^3.1.22",
-    "gatsby-plugin-sass": "^2.1.28",
-    "gatsby-plugin-sharp": "^2.4.5",
-    "gatsby-plugin-sitemap": "^2.2.27",
-    "gatsby-plugin-styled-components": "^3.0.0-beta.3",
-    "gatsby-remark-images": "^3.1.44",
-    "gatsby-source-filesystem": "^2.1.48",
-    "gatsby-source-instagram": "^0.6.1",
-    "gatsby-source-medium": "^2.1.19",
-    "gatsby-transformer-json": "^2.2.26",
-    "gatsby-transformer-remark": "^2.6.50",
-    "gatsby-transformer-sharp": "^2.3.14",
-    "node-fetch": "^2.1.2",
-    "octonode": "^0.9.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.0",
-    "react-scrolltop-button": "^0.1.4",
-    "styled-components": "^5.0.0",
+    "gatsby": "^2.32.8",
+    "gatsby-image": "^2.11.0",
+    "gatsby-plugin-google-analytics": "^2.11.0",
+    "gatsby-plugin-manifest": "^2.12.1",
+    "gatsby-plugin-mdx": "^1.10.1",
+    "gatsby-plugin-offline": "^3.10.2",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-sass": "^3.2.0",
+    "gatsby-plugin-sharp": "^2.14.3",
+    "gatsby-plugin-sitemap": "^2.12.0",
+    "gatsby-plugin-styled-components": "^3.10.0",
+    "gatsby-remark-images": "^3.11.1",
+    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-source-instagram": "^0.9.0",
+    "gatsby-source-medium": "^2.10.0",
+    "gatsby-transformer-json": "^2.11.0",
+    "gatsby-transformer-remark": "^2.16.1",
+    "gatsby-transformer-sharp": "^2.12.0",
+    "node-fetch": "^2.6.1",
+    "octonode": "^0.10.0",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-scrolltop-button": "^0.1.6",
+    "styled-components": "^5.2.1",
     "twitter": "^1.7.1"
   },
   "keywords": [
@@ -47,15 +47,18 @@
     "fix": "eslint --fix \"src/**/*.+(js)\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "s3-deploy": "cd public/ && aws s3 sync . s3://graysonhicks.com",
-    "deploy": "gatsby build && npm run s3-deploy"
+    "deploy": "gatsby build && npm run s3-deploy",
+    "serve": "gatsby serve"
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
-    "eslint": "^6.8.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "node-sass": "^4.9.2",
-    "prettier": "^1.11.1"
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "node-sass": "^5.0.0",
+    "prettier": "^2.2.1"
   }
 }
