--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^6.0.0",
     "gatsby": "^2.32.8",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-gatsby-cloud": "^1.0.2",
     "gatsby-plugin-google-analytics": "^2.11.0",
     "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-mdx": "^1.10.1",
