--- a/package.json
+++ b/package.json
@@ -4,38 +4,38 @@
   "version": "1.0.0",
   "author": "Grayson Hicks <graysonhicks@gmail.com>",
   "dependencies": {
-    "@mdx-js/mdx": "^1.0.0",
-    "@mdx-js/react": "^1.0.0",
+    "@mdx-js/mdx": "^2.1.5",
+    "@mdx-js/react": "^2.1.5",
     "babel-plugin-styled-components": "^2.0.7",
     "dotenv": "^16.0.1",
-    "gatsby": "^4.18.0",
-    "gatsby-image": "^3.0.0",
-    "gatsby-plugin-gatsby-cloud": "^4.18.0",
-    "gatsby-plugin-google-analytics": "^4.18.0",
-    "gatsby-plugin-image": "^2.18.0",
-    "gatsby-plugin-manifest": "^4.18.0",
-    "gatsby-plugin-mdx": "^3.18.0",
-    "gatsby-plugin-offline": "^5.18.0",
-    "gatsby-plugin-react-helmet": "^5.18.0",
+    "gatsby": "^5.0.0-next.0",
+    "gatsby-plugin-google-analytics": "^5.0.0-next.0",
+    "gatsby-plugin-image": "3.0.0-next.0",
+    "gatsby-plugin-manifest": "^5.0.0-next.0",
+    "gatsby-plugin-mdx": "^5.0.0-next.0",
+    "gatsby-plugin-offline": "^5.0.0-next.0",
+    "gatsby-plugin-react-helmet": "^5.0.0-next.0",
     "gatsby-plugin-remote-images": "^3.4.0",
-    "gatsby-plugin-sass": "^5.18.0",
-    "gatsby-plugin-sharp": "^4.18.0",
-    "gatsby-plugin-sitemap": "^5.18.0",
-    "gatsby-plugin-styled-components": "^5.18.0",
+    "gatsby-plugin-sass": "^5.0.0-next.0",
+    "gatsby-plugin-sharp": "^5.0.0-next.0",
+    "gatsby-plugin-sitemap": "^5.0.0-next.0",
+    "gatsby-plugin-styled-components": "^5.0.0-next.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-images": "^6.18.0",
-    "gatsby-source-filesystem": "^4.18.0",
+    "gatsby-remark-images": "^5.0.0-next.0",
+    "gatsby-source-filesystem": "^5.0.0-next.0",
     "gatsby-source-instagram": "^0.9.0",
     "gatsby-source-medium": "^4.18.0",
-    "gatsby-transformer-json": "^4.18.0",
-    "gatsby-transformer-remark": "^5.18.0",
-    "gatsby-transformer-sharp": "^4.18.0",
+    "gatsby-transformer-json": "^5.0.0-next.0",
+    "gatsby-transformer-remark": "^5.0.0-next.0",
+    "gatsby-transformer-sharp": "^5.0.0-next.0",
     "node-fetch": "^3.2.6",
     "octonode": "^0.10.2",
     "prop-types": "^15.8.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.4.0",
+    "react-is": "^18.2.0",
     "react-scrolltop-button": "^0.1.9",
     "styled-components": "^5.3.5",
     "twitter": "^1.7.1"
