--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
     "@mdx-js/react": "^1.0.0",
     "babel-plugin-styled-components": "^2.0.7",
     "dotenv": "^16.0.1",
-    "gatsby": "^5.0.0-next.0",
-    "gatsby-plugin-image": "3.0.0-next.0",
-    "gatsby-plugin-manifest": "^5.0.0-next.0",
+    "gatsby": "^5.0.0",
+    "gatsby-plugin-image": "^3.0.0",
+    "gatsby-plugin-manifest": "^5.0.0",
     "gatsby-plugin-mdx": "^3.0.0",
-    "gatsby-plugin-offline": "^5.0.0-next.0",
+    "gatsby-plugin-offline": "^5.0.0",
     "gatsby-plugin-remote-images": "^3.4.0",
-    "gatsby-plugin-sass": "^5.0.0-next.0",
-    "gatsby-plugin-sharp": "^5.0.0-next.0",
-    "gatsby-plugin-sitemap": "^5.0.0-next.0",
-    "gatsby-plugin-styled-components": "^5.0.0-next.0",
+    "gatsby-plugin-sass": "^5.0.0",
+    "gatsby-plugin-sharp": "^5.0.0",
+    "gatsby-plugin-sitemap": "^5.0.0",
+    "gatsby-plugin-styled-components": "^5.0.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-images": "^3.0.0",
-    "gatsby-source-filesystem": "^5.0.0-next.0",
+    "gatsby-source-filesystem": "^5.0.0",
     "gatsby-source-medium": "^4.18.0",
-    "gatsby-transformer-json": "^5.0.0-next.0",
+    "gatsby-transformer-json": "^5.0.0",
     "gatsby-transformer-remark": "^3.0.0",
-    "gatsby-transformer-sharp": "^5.0.0-next.0",
+    "gatsby-transformer-sharp": "^5.0.0",
     "gatsby-source-instagram": "^0.9.0",
     "node-fetch": "^3.2.6",
     "octonode": "^0.10.2",
