--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
     "gatsby-plugin-image": "^3.0.0",
     "gatsby-plugin-manifest": "^5.0.0",
     "gatsby-plugin-mdx": "^5.9.0",
-    "gatsby-plugin-offline": "^5.0.0",
     "gatsby-plugin-remote-images": "^3.4.0",
-    "gatsby-plugin-sass": "^5.0.0",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
+    "gatsby-plugin-sass": "^6.9.0",
     "gatsby-plugin-sharp": "^5.0.0",
-    "gatsby-plugin-sitemap": "^5.0.0",
-    "gatsby-plugin-styled-components": "^5.0.0",
+    "gatsby-plugin-sitemap": "^6.9.0",
+    "gatsby-plugin-styled-components": "^6.9.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-remark-images": "^3.0.0",
+    "gatsby-remark-images": "^7.9.0",
     "gatsby-source-filesystem": "^5.0.0",
+    "gatsby-source-instagram": "^0.9.0",
     "gatsby-source-medium": "^4.18.0",
     "gatsby-transformer-json": "^5.0.0",
     "gatsby-transformer-remark": "^6.9.0",
     "gatsby-transformer-sharp": "^5.0.0",
-    "gatsby-source-instagram": "^0.9.0",
     "node-fetch": "^3.2.6",
     "octonode": "^0.10.2",
     "prop-types": "^15.8.1",
@@ -50,13 +50,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "s3-deploy": "cd public/ && aws s3 sync . s3://graysonhicks.com",
     "deploy": "gatsby build && npm run s3-deploy",
-    "serve": "gatsby serve"
+    "serve": "gatsby serve",
+    "lint": "eslint . --ext md,mdx --fix"
   },
   "devDependencies": {
     "bootstrap": "^5.1.3",
-    "eslint": "^8.19.0",
+    "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-mdx": "^2.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
