--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,7 +1,7 @@
 [
   {
     "title": "netlify (2023 - present)",
-    "description": "Performing React site performance audits for enterprise clients. Supporting large Netlify users to build and maintain first-class web experiences.",
+    "description": "Conducting React site performance audits for enterprise clients. Supporting large Netlify users to build and maintain first-class web experiences.",
     "image": "../images/netlify.png",
     "href": "https://www.netlify.com",
     "work": true
