--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,6 +1,13 @@
 [
   {
-    "title": "netlify (2023 - present)",
+    "title": "mfd, inc. (Nov. 2023 - current)",
+    "description": "Lead front-end engineer improving physical product development and financing using our Next.js app and LLM-based agents",
+    "image": "https://manufactured.com/wp-content/uploads/2022/02/MFD-Logo-Orange-White-768x141.png",
+    "href": "https://www.manufactured.com",
+    "work": true
+  },
+  {
+    "title": "netlify (Mar. 2023 - Nov. 2023)",
     "description": "Conducting React site performance audits for enterprise clients. Supporting large Netlify users to build and maintain first-class web experiences.",
     "image": "../images/netlify.png",
     "href": "https://www.netlify.com",
