--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -2,7 +2,7 @@
   {
     "title": "mfd, inc. (Nov. 2023 - current)",
     "description": "Lead front-end engineer improving physical product development and financing using our Next.js app and LLM-based agents",
-    "image": "https://manufactured.com/wp-content/uploads/2022/02/MFD-Logo-Orange-White-768x141.png",
+    "image": "../images/logo192.png",
     "href": "https://www.manufactured.com",
     "work": true
   },
